--- a/RegApp2/Views/Shared/_Layout.cshtml
+++ b/RegApp2/Views/Shared/_Layout.cshtml
@@ -2,14 +2,29 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
+        @RenderSection("Head", required: false)
         <title>@ViewBag.Title - My ASP.NET MVC Application</title>
         <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
         <meta name="viewport" content="width=device-width" />
-        @Styles.Render("~/content/jquery-ui-1.9.2.custom.css")
         @Styles.Render("~/Content/css")
-        @Scripts.Render("~/bundles/modernizr")
-                @Scripts.Render("~/scripts/jquery-ui-1.9.2.custom/jquery-ui-1.9.2.custom/js/jquery-1.8.3.js")
-        @Scripts.Render("~/scripts/jquery-ui-1.9.2.custom/jquery-ui-1.9.2.custom/js/jquery-ui-1.9.2.custom.js")
+        
+	<script src="@Url.Content("~/scripts/")jquery-1.8.3.js"></script>
+        @*@Scripts.Render("~/scripts/jquery-1.9.1.js")*@
+        <link rel="stylesheet" href="@Url.Content("~/content/")jquery.ui.all.css">
+	    <link rel="stylesheet" href="@Url.Content("~/content/")demos.css">
+	    <script src="@Url.Content("~/scripts/")jquery.ui.core.js"></script>
+	    <script src="@Url.Content("~/scripts/")jquery.ui.widget.js"></script>
+	    <script src="@Url.Content("~/scripts/")jquery.ui.datepicker.js"></script>
+        
+        
+	<script type="text/javascript">
+        $(document).ready(function(){
+	        $("#dob").datepicker({
+	            //changeMonth: true,
+	            //changeYear: true
+	        });
+	    });
+	</script>
     </head>
     <body>
         <header>
